# seguros-arqsoft

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DOCKER-DEPLOYMENT.md  Dockerfile  Dockerfile.dev  PIPELINE.md  PIPELINE_LOCAL.md  Procfile  README-DOCKER.md  README.md  auto-fix.bat  check-lint.bat  conftest.py  crear_siniestro_prueba.py  create_superuser.py  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.bat  manage.py  nginx.conf  poblar_checklist_siniestros.py  poblar_ejemplo.py  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  run-pipeline-local.bat  setup-pipeline.bat  setup-pipeline.sh  setup.sh  validate-pipeline-complete.py
.github/workflows/: ci.yml
app/: admin.py  apps.py  context_processors.py  dtos.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
app/management/commands/: backup_database.py  crear_siniestros_documentacion.py  enviar_alertas_email.py  generar_alertas.py  generar_reporte_polizas.py  generar_reporte_siniestros.py  inicializar_config.py  leer_correos.py  poblar_brokers_aseguradoras.py  poblar_catalogo_ramos.py  poblar_checklist.py  poblar_datos_ejemplo.py  poblar_datos_prueba.py  poblar_polizas_desglose.py  poblar_ramos_generales.py  poblar_siniestros_contadora.py  reset_demo_data.py  restore_database.py  setup_completo.py
app/migrations/: 0001_initial.py  0002_alter_documento_archivo_historicaldocumento_and_more.py  0002_configuracionbackup_backupregistro.py  0003_add_responsable_custodio_model.py  0003_alter_detallepolizaramo_options_and_more.py  0004_add_new_modules.py  0005_add_ramos_system.py  0006_add_checklist_item_to_adjunto.py  0007_companiaaseguradora_brokers.py
app/services/: __init__.py  base.py  calculations.py  dashboard_filters.py  documentos.py  domain_services.py  estadisticas.py  notificaciones.py  reportes_avanzados.py
app/services/alertas/: __init__.py  alertas.py  base.py  broker.py  email_service.py  facade.py  notificadores.py  poliza.py  responsable.py  user.py
app/services/analytics/: __init__.py  avanzados.py  dashboard.py  (+2 more)
app/templatetags/: __init__.py  custom_filters.py
doc_templates/word/: carta_formal.docx
docs/: DEPLOYMENT.md  INICIO_RAPIDO.md  POLITICAS_EMAIL.md  README.md  RESUMEN_IMPLEMENTACION.md
seguros/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+116 files in other folders)
